--- a/.eslintrc
+++ b/.eslintrc
@@ -26,7 +26,7 @@
 		"react/react-in-jsx-scope": 1,
 		"react/self-closing-comp": 1,
 		"react/wrap-multilines": 1,
-		"semi": 2,
+		"semi": [2, "never"],
 		"strict": 0
 	}
 }
