Use prop-types and remove React.createClass

--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "eslint": "^1.6.0",
     "eslint-plugin-react": "^3.5.1",
     "gulp": "^3.9.0",
+    "prop-types": "*",
     "react": "^0.14.0",
     "react-component-gulp-tasks": "^0.7.6",
     "react-dom": "^0.14.0"
   },
   "peerDependencies": {
+    "prop-types": "*",
     "react": "^0.14.0"
   },
   "browserify-shim": {
+    "prop-types": "global:PropTypes",
     "react": "global:React"
   },
   "scripts": {
