Change example directory to docs

--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "build": "babel -d dist src --copy-files",
     "clean": "rm -rf dist && mkdir dist",
     "watch": "babel -w -d dist src --copy-files",
-    "build-example": "browserify -t browserify-css ./example/example.js -o ./example/bundle.js -t [ babelify --presets [ es2015 react ] ]",
-    "watch-example": "watchify -t browserify-css ./example/example.js -o ./example/bundle.js -t [ babelify --presets [ es2015 react ] ] -v",
-    "serve-example": "http-server ./example/ -p 8080",
+    "build-example": "browserify -t browserify-css ./docs/example.js -o ./docs/bundle.js -t [ babelify --presets [ es2015 react ] ]",
+    "watch-example": "watchify -t browserify-css ./docs/example.js -o ./docs/bundle.js -t [ babelify --presets [ es2015 react ] ] -v",
+    "serve-example": "http-server ./docs/ -p 8080",
     "start": "npm run build; npm run build-example; npm run serve-example",
-    "deploy-example": "npm run build-example; gh-pages -d ./example",
+    "deploy-example": "npm run build-example; gh-pages -d ./docs",
     "test": "no tests yet!",
     "preversion": "npm run clean && npm run build",
     "postpublish": "git push && git push --tag"
