--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-super-responsive-table",
-  "version": "4.1.4",
+  "version": "4.1.5",
   "description": "React Super Responsive Table",
   "main": "dist/SuperResponsiveTable.js",
   "author": "The University Of Alabama",
@@ -62,5 +62,8 @@
   ],
   "directories": {
     "test": "test"
+  },
+  "dependencies": {
+    "react-window-ui": "0.0.3"
   }
 }
