--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,4 @@ before_install:
   - npm install -g greenkeeper-lockfile@1
 before_script: greenkeeper-lockfile-update
 after_script: greenkeeper-lockfile-upload
+after_success: 'npm run coveralls'
