--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,11 @@ language: node_js
 node_js:
   - node
   - lts/*
-  - "6"
 script:
   - npm install
   - npm run build
 before_install:
-  - npm install -g npm@5
+  - npm install -g npm
   - npm install -g greenkeeper-lockfile@1
 before_script: greenkeeper-lockfile-update
 after_script: greenkeeper-lockfile-upload
