--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-super-responsive-table",
-  "version": "4.3.1",
+  "version": "4.3.2",
   "description": "React Super Responsive Table",
   "main": "dist/SuperResponsiveTable.js",
   "author": "The University Of Alabama",
@@ -22,7 +22,7 @@
     "watch": "babel -w -d dist src --copy-files",
     "build-example": "browserify -t browserify-css ./example/example.js -o ./example/bundle.js -t [ babelify --presets [ es2015 react ] ]",
     "watch-example": "watchify -t browserify-css ./example/example.js -o ./example/bundle.js -t [ babelify --presets [ es2015 react ] ] -v",
-    "serve-example": "http-server ./example/ -p 8080",
+    "serve-example": "serve ./example/ -p 8080",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js'",
     "start": "npm run build; npm run build-example; npm run serve-example",
     "preversion": "npm run test && npm run format && npm run clean && npm run build && npm run build-example",
@@ -52,24 +52,25 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babelify": "^8.0.0",
-    "browserify": "^16.2.0",
+    "browserify": "^16.2.2",
     "browserify-css": "^0.14.0",
-    "core-js": "^2.5.5",
-    "coveralls": "^3.0.1",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "enzyme-to-json": "^3.3.3",
+    "core-js": "^2.5.7",
+    "coveralls": "^3.0.2",
+    "enzyme": "^3.5.0",
+    "enzyme-adapter-react-16": "^1.3.1",
+    "enzyme-to-json": "^3.3.4",
     "http-server": "^0.11.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^23.4.2",
-    "prettier": "1.13.4",
-    "prop-types": "^15.6.1",
-    "react": "^16.4.0",
-    "react-dom": "^16.2.0",
-    "react-live": "1.10.1",
-    "react-test-renderer": "^16.3.2",
+    "jest": "^23.5.0",
+    "prettier": "1.14.2",
+    "prop-types": "^15.6.2",
+    "react": "^16.4.2",
+    "react-dom": "^16.2.2",
+    "react-live": "1.11.0",
+    "react-test-renderer": "^16.4.2",
     "react-window-ui": "^1.1.0",
-    "styled-components": "3.3.2",
+    "serve": "^10.0.0",
+    "styled-components": "3.4.5",
     "watchify": "^3.11.0"
   },
   "browserify-css": {
@@ -86,6 +87,6 @@
     "test": "test"
   },
   "dependencies": {
-    "create-react-context": "^0.2.2"
+    "create-react-context": "^0.2.3"
   }
 }
