--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,10 @@ script:
   - npm run build
   - npm run build-example
 before_install:
-  - npm install -g npm
-  - npm install -g greenkeeper-lockfile@1
+# package-lock.json was introduced in npm@5
+- '[[ $(node -v) =~ ^v9.*$ ]] || npm install -g npm@latest' # skipped when using node 9
+- npm install -g greenkeeper-lockfile
+install: npm install
 before_script: greenkeeper-lockfile-update
 after_script: greenkeeper-lockfile-upload
 after_success: 'npm run coveralls'
