--- a/package.json
+++ b/package.json
@@ -17,15 +17,14 @@
     "node": ">= 0.10.0"
   },
   "scripts": {
+    "dev": "npm run watch && mdx-go docs",
+    "docs": "mdx-go build docs -d public",
     "build": "babel -d dist src --copy-files",
     "clean": "rm -rf dist && mkdir dist",
     "watch": "babel -w -d dist src --copy-files",
-    "build-example": "browserify -t browserify-css ./example/example.js -o ./example/bundle.js -t [ babelify --presets [ es2015 react ] ]",
-    "watch-example": "watchify -t browserify-css ./example/example.js -o ./example/bundle.js -t [ babelify --presets [ es2015 react ] ] -v",
-    "serve-example": "serve ./example/ -p 8080",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js'",
-    "start": "npm run build; npm run build-example; npm run serve-example",
-    "preversion": "npm run test && npm run format && npm run clean && npm run build && npm run build-example",
+    "start": "npm run build; npm run dev",
+    "preversion": "npm run test && npm run format && npm run clean && npm run build && npm run docs",
     "postpublish": "git push && git push --tag",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -51,15 +50,11 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "babelify": "^8.0.0",
-    "browserify": "^16.2.2",
-    "browserify-css": "^0.14.0",
     "core-js": "^2.5.7",
     "coveralls": "^3.0.2",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
     "enzyme-to-json": "^3.3.4",
-    "http-server": "^0.11.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.5.0",
     "prettier": "1.14.2",
@@ -69,14 +64,7 @@
     "react-live": "1.11.0",
     "react-test-renderer": "^16.4.2",
     "react-window-ui": "^1.1.0",
-    "serve": "^10.0.0",
-    "styled-components": "3.4.6",
-    "watchify": "^3.11.0"
-  },
-  "browserify-css": {
-    "autoInject": true,
-    "minify": true,
-    "rootDir": "."
+    "styled-components": "3.4.5"
   },
   "keywords": [
     "react",
@@ -87,6 +75,7 @@
     "test": "test"
   },
   "dependencies": {
-    "create-react-context": "^0.2.3"
+    "create-react-context": "^0.2.3",
+    "mdx-go": "^1.1.9"
   }
 }
