--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,4 @@
 {
-    "presets": ["react", "es2015"],
-    "plugins": ["transform-object-rest-spread"]
-  }
-  
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
+  "plugins": ["@babel/plugin-transform-spread"]
+}
