--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
   },
   "license": "MIT",
   "scripts": {
-    "dev": "mdx-go docs && npm run watch",
-    "docs": "mdx-go build docs -d public",
+    "dev": "next",
+    "build-site": "next build",
     "build": "babel -d dist src --copy-files",
     "clean": "rm -rf dist && mkdir dist",
     "watch": "babel -w -d dist src --copy-files",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js'",
-    "start": "npm run build; npm run dev",
-    "preversion": "npm run test && npm run format && npm run clean && npm run build && npm run docs",
+    "start": "next start",
+    "preversion": "npm run test && npm run format && npm run clean && npm run build && npm run build-site",
     "postpublish": "git push && git push --tag",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -47,27 +47,27 @@
     }
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "core-js": "^2.5.7",
-    "coveralls": "^3.0.2",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.7.0",
+    "@babel/cli": "^7.4.3",
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-transform-spread": "^7.2.2",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-react": "^7.0.0",
+    "babel-jest": "^24.7.1",
+    "coveralls": "^3.0.3",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.12.1",
     "enzyme-to-json": "^3.3.4",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^23.6.0",
-    "mdx-go": "^1.1.11",
-    "prettier": "1.15.3",
-    "prop-types": "^15.6.2",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-live": "1.12.0",
-    "react-test-renderer": "^16.6.3",
+    "jest": "^24.7.1",
+    "next": "^7.0.2",
+    "prettier": "1.16.4",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-live": "^2.0.1",
+    "react-test-renderer": "^16.8.6",
     "react-window-ui": "^1.1.1",
-    "styled-components": "4.1.3"
+    "styled-components": "4.2.0",
+    "@zeit/next-css": "^1.0.1"
   },
   "keywords": [
     "react",
