Update start script

--- a/package.json
+++ b/package.json
@@ -19,14 +19,13 @@
   },
   "license": "MIT",
   "scripts": {
-    "dev": "next",
+    "start": "next",
     "build-site": "next build",
     "build": "babel -d dist src --copy-files",
     "clean": "rm -rf dist && mkdir dist",
     "export": "npm run build-site && next export",
     "watch": "babel -w -d dist src --copy-files",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js'",
-    "start": "next start",
     "preversion": "npm run test && npm run format && npm run clean && npm run build && npm run build-site",
     "postpublish": "git push && git push --tag",
     "test": "jest",
