--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-super-responsive-table",
-  "version": "4.3.11",
-  "description": "react-super-responsive-table converts your table data to a user-friendly list in mobile view",
+  "version": "4.3.10",
+  "description": "react-super-responsive-table converts your table data to a user-friendly list in mobile view.",
   "main": "dist/SuperResponsiveTable.js",
   "files": [
     "dist/SuperResponsiveTable.js",
@@ -53,13 +53,13 @@
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
     "@zeit/next-css": "^1.0.1",
-    "babel-jest": "^24.7.1",
+    "babel-jest": "^24.8.0",
     "coveralls": "^3.0.3",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
     "enzyme-to-json": "^3.3.5",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.7.1",
+    "jest": "^24.8.0",
     "next": "^8.1.0",
     "prettier": "1.17.0",
     "react": "^16.8.6",
