--- a/package.json
+++ b/package.json
@@ -69,6 +69,10 @@
     "react-window-ui": "^2.1.0",
     "styled-components": "4.3.1"
   },
+  "peerDependencies": {
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0"
+},
   "keywords": [
     "react",
     "react-component",
