--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "dist/SuperResponsiveTableStyle.css",
     "dist/tableContext.js"
   ],
-  "author": "The University Of Alabama",
-  "homepage": "https://github.com/ua-oira/react-super-responsive-table",
+  "author": "Coston Perkins (https://coston.io)",
+  "homepage": "https://github.com/coston/react-super-responsive-table",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ua-oira/react-super-responsive-table.git"
+    "url": "https://github.com/coston/react-super-responsive-table.git"
   },
   "bugs": {
-    "url": "https://github.com/ua-oira/react-super-responsive-table/issues"
+    "url": "https://github.com/coston/react-super-responsive-table/issues"
   },
   "license": "MIT",
   "scripts": {
