--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "@babel/cli": "7.15.7",
     "@babel/core": "7.15.5",
+    "@babel/plugin-transform-runtime": "^7.15.8",
     "@babel/plugin-transform-spread": "7.14.6",
     "@babel/preset-env": "7.15.6",
     "@babel/preset-react": "7.14.5",
@@ -53,7 +54,6 @@
     "@commitlint/config-conventional": "13.1.0",
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "12.1.0",
-    "@zeit/next-css": "1.0.1",
     "babel-eslint": "10.1.0",
     "babel-jest": "27.1.0",
     "coveralls": "3.1.1",
