--- a/demo/package.json
+++ b/demo/package.json
@@ -23,6 +23,7 @@
     "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-live": "^2.3.0"
+    "react-live": "^2.3.0",
+    "react-super-responsive-table": "file:../"
   }
 }
