--- a/demo/package.json
+++ b/demo/package.json
@@ -24,6 +24,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-live": "^2.3.0",
-    "react-super-responsive-table": "file:../"
+    "react-super-responsive-table": "../lib/cjs"
   }
 }
