--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "license": "MIT",
   "scripts": {
+    "dev": "yarn build --watch & cd demo && rm -rf node_modules && yarn && yarn dev",
     "build": "yarn build:esm && yarn build:cjs",
     "build:esm": "tsc",
     "build:cjs": "tsc --module commonjs --outDir lib/cjs"
