--- a/package.json
+++ b/package.json
@@ -83,8 +83,8 @@
   },
   "peerDependencies": {
     "prop-types": ">= 15",
-    "react": "^16.9.0 || ^17.0.0 || ^18.0.0",
-    "react-dom": "^16.9.0 || ^17.0.0 || ^18.0.0"
+    "react": ">=16.9.0",
+    "react-dom": ">=16.9.0"
   },
   "lint-staged": {
     "*.{js,jsx}": [
