--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "build-site": "next build",
     "build": "babel -d dist src --copy-files",
     "clean": "rimraf dist && mkdir dist",
-    "export": "yarn build-site && next export",
+    "export": "npm run build-site && next export",
     "watch": "babel -w -d dist src --copy-files",
     "lint": "eslint --ext=js --ext=jsx ./src",
     "lint:fix": "eslint --ext=js --ext=jsx ./src --fix",
-    "preversion": "yarn test && yarn lint:fix && yarn clean && yarn build && yarn build-site",
+    "preversion": "npm run test && npm run lint:fix && npm run clean && npm run build && npm run build-site",
     "postpublish": "git push && git push --tag",
     "test": "jest",
     "test:watch": "jest --watch",
