--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@babel/preset-react": "7.18.6",
     "@commitlint/cli": "17.4.0",
     "@commitlint/config-conventional": "17.4.0",
+    "@next/eslint-plugin-next": "^13.1.3",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "babel-eslint": "10.1.0",
