--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -10,11 +10,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Use Node.js lts
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          node-version: lts/*
+          node-version: 'lts/*'
       - run: npm ci
       - run: npm run build
       - run: npm run test
