--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -11,10 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js lts
+      - name: Use Node.js 18
         uses: actions/setup-node@v3
         with:
-          node-version: 'lts/*'
+          node-version: 18
       - run: npm ci
       - run: npm run build
       - run: npm run test
