--- a/package.json
+++ b/package.json
@@ -70,12 +70,12 @@
     "jest": "29.4.2",
     "jest-environment-jsdom": "29.4.2",
     "lint-staged": "13.1.1",
-    "next": "12.2.2",
+    "next": "13.1.6",
     "prettier": "2.8.4",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-live": "3.1.1",
+    "react-pkg-demo": "^0.1.8",
     "react-test-renderer": "18.2.0",
     "react-window-ui": "2.2.0",
     "rimraf": "4.1.2",
