--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "license": "MIT",
   "scripts": {
     "start": "next",
-    "build-site": "next build",
+    "build-site": "npm run build && next build",
     "build": "babel -d dist src --copy-files",
     "clean": "rimraf dist && mkdir dist",
     "export": "npm run build-site && next export",
@@ -52,6 +52,7 @@
     "@babel/preset-react": "7.18.6",
     "@commitlint/cli": "17.4.2",
     "@commitlint/config-conventional": "17.4.2",
+    "@next/eslint-plugin-next": "^13.1.6",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "babel-eslint": "10.1.0",
