--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "bugs": {
     "url": "https://github.com/coston/react-super-responsive-table/issues"
   },
+  "engines" : {
+    "node" : ">=12"
+  },
   "license": "MIT",
   "scripts": {
     "start": "next",
