--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -17,4 +17,5 @@ jobs:
           node-version: 'lts/*'
       - run: npm ci
       - run: npm run build
+      - run: npm run lint
       - run: npm run test
