--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "react-super-responsive-table converts your table data to a user-friendly list in mobile view.",
   "files": [
     "/lib",
-    "src/SuperResponsiveTableStyle.css"
+    "/dist"
   ],
   "main": "./lib/cjs/index.js",
   "module": "./lib/esm/index.js",
@@ -27,14 +27,14 @@
     "build:cjs": "tsc --module commonjs --outDir lib/cjs",
     "build:esm": "tsc",
     "build:watch": "tsc --watch",
-    "build-site": "npm run build && next build",
-    "clean": "rimraf dist && mkdir dist",
-    "copy-css": "mkdir -p lib/cjs lib/esm && cp src/SuperResponsiveTableStyle.css lib/cjs/ && cp src/SuperResponsiveTableStyle.css lib/esm/",
+    "build-site": "npm run build; next build",
+    "clean": "rimraf dist lib",
+    "copy-css": "mkdir -p dist && cp src/SuperResponsiveTableStyle.css dist/",
     "coveralls": "jest --coverage --coverageReporters=text-lcov | coveralls",
     "dev": "concurrently \"npm run start\" \"npm run build:watch\"",
     "export": "npm run build-site && next export",
-    "lint": "eslint --ext=js,jsx ./src",
-    "lint:fix": "eslint --ext=js,jsx ./src --fix",
+    "lint": "eslint '**/*.{js,ts,tsx}'",
+    "lint:fix": "eslint '**/*.{js,ts,tsx}' --fix",
     "postpublish": "git push && git push --tags",
     "preversion": "npm run test && npm run lint:fix && npm run clean && npm run build && npm run build-site",
     "start": "next",
