--- a/package.json
+++ b/package.json
@@ -23,27 +23,25 @@
   },
   "license": "MIT",
   "scripts": {
+    "dev": "concurrently \"npm run start\" \"npm run build:watch\"",
     "build": "npm run build:esm && npm run build:cjs && npm run copy-css",
     "build:cjs": "tsc --module commonjs --outDir lib/cjs",
     "build:esm": "tsc",
     "build:watch": "tsc --watch",
-    "build-site": "npm run build; next build",
+    "build-demo": "next build",
     "clean": "rimraf dist lib",
     "copy-css": "mkdir -p dist && cp src/SuperResponsiveTableStyle.css dist/",
     "coveralls": "jest --coverage --coverageReporters=text-lcov | coveralls",
-    "dev": "concurrently \"npm run start\" \"npm run build:watch\"",
-    "export": "npm run build-site && next export",
     "lint": "eslint '**/*.{js,ts,tsx}'",
     "lint:fix": "eslint '**/*.{js,ts,tsx}' --fix",
     "postpublish": "git push && git push --tags",
-    "preversion": "npm run test && npm run lint:fix && npm run clean && npm run build && npm run build-site",
+    "preversion": "npm run test && npm run lint:fix && npm run clean && npm run build && npm run build-demo",
     "start": "next",
     "test": "jest --config jest.config.ts",
     "test:coverage": "jest --coverage --config jest.config.ts",
     "test:watch": "jest --watch --config jest.config.ts"
   },
   "devDependencies": {
-    "@babel/plugin-transform-spread": "^7.24.7",
     "@commitlint/cli": "19.3.0",
     "@commitlint/config-conventional": "19.2.2",
     "@next/eslint-plugin-next": "^14.0.0",
@@ -69,19 +67,14 @@
     "lint-staged": "15.2.8",
     "next": "14.2.5",
     "prettier": "3.3.3",
-    "prop-types": "15.8.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-pkg-demo": "^0.1.8",
-    "react-test-renderer": "18.3.1",
-    "react-window-ui": "2.2.0",
     "rimraf": "6.0.1",
-    "styled-components": "6.1.12",
     "ts-jest": "^29.2.4",
     "typescript": "^5.5.4"
   },
   "peerDependencies": {
-    "prop-types": ">= 15",
     "react": ">=16.9.0",
     "react-dom": ">=16.9.0"
   },
