--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-super-responsive-table",
-  "version": "5.2.2",
+  "version": "6.0.0-0",
   "description": "react-super-responsive-table converts your table data to a user-friendly list in mobile view.",
   "files": [
     "/lib",
