--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "react-super-responsive-table",
-  "version": "6.0.0-0",
+  "version": "6.0.0-6",
   "description": "react-super-responsive-table converts your table data to a user-friendly list in mobile view.",
   "files": [
-    "/lib",
-    "/src/SuperResponsiveTableStyle.css"
+    "dist"
   ],
-  "main": "./lib/cjs/index.js",
-  "module": "./lib/esm/index.js",
-  "types": "./lib/esm/index.d.ts",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esm/index.js",
+  "types": "./dist/esm/index.d.ts",
   "author": "Coston Perkins (https://coston.io)",
   "homepage": "https://github.com/coston/react-super-responsive-table",
   "repository": {
@@ -24,12 +23,13 @@
   "license": "MIT",
   "scripts": {
     "dev": "concurrently \"npm run start\" \"npm run build:watch\"",
-    "build": "npm run build:esm && npm run build:cjs && npm run copy-css",
-    "build:cjs": "tsc --module commonjs --outDir lib/cjs",
+    "build": "npm run build:esm && npm run build:cjs; npm run copy-css",
+    "build:cjs": "tsc --module commonjs --outDir dist/cjs",
     "build:esm": "tsc",
     "build:watch": "tsc --watch",
     "build-demo": "next build",
-    "clean": "rimraf dist lib",
+    "clean": "rimraf dist dist",
+    "copy-css": "cp src/SuperResponsiveTableStyle.css dist/",
     "coveralls": "jest --coverage --coverageReporters=text-lcov | coveralls",
     "lint": "eslint '**/*.{js,ts,tsx}'",
     "lint:fix": "eslint '**/*.{js,ts,tsx}' --fix",
