--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "lib/esm",
+    "outDir": "dist/esm",
     "module": "esnext",
     "target": "es5",
     "lib": ["es6", "dom", "es2016", "es2017"],
@@ -29,5 +29,5 @@
     }
   },
   "include": ["src"],
-  "exclude": ["node_modules", "lib", "test", "docs"]
+  "exclude": ["node_modules", "dist", "test", "docs"]
 }
