--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "build:cjs": "tsc --module commonjs --outDir dist/cjs",
     "build:esm": "tsc",
     "build:watch": "tsc --watch",
-    "build-demo": "next build",
+    "build-demo": "cd demo && npm run build",
     "clean": "rimraf dist dist",
     "copy-css": "cp src/SuperResponsiveTableStyle.css dist/",
     "coveralls": "jest --coverage --coverageReporters=text-lcov | coveralls",
@@ -35,10 +35,11 @@
     "lint:fix": "eslint '**/*.{js,ts,tsx}' --fix",
     "postpublish": "git push && git push --tags",
     "preversion": "npm run test && npm run lint:fix && npm run clean && npm run build && npm run build-demo",
-    "start": "next",
+    "start": "cd demo && npm start",
     "test": "jest --config jest.config.ts",
     "test:coverage": "jest --coverage --config jest.config.ts",
-    "test:watch": "jest --watch --config jest.config.ts"
+    "test:watch": "jest --watch --config jest.config.ts",
+    "postinstall": "if [ \"$CI\" != \"true\" ]; then cd demo && npm install; fi"
   },
   "devDependencies": {
     "@commitlint/cli": "19.3.0",
@@ -64,11 +65,7 @@
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "lint-staged": "15.2.8",
-    "next": "14.2.5",
     "prettier": "3.3.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-pkg-demo": "^0.1.8",
     "rimraf": "6.0.1",
     "ts-jest": "^29.2.4",
     "typescript": "^5.5.4"
