--- a/demo/package.json
+++ b/demo/package.json
@@ -12,8 +12,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-pkg-demo": "^0.6.0",
-    "react-super-responsive-table": "file:.."
+    "react-pkg-demo": "^0.6.0"
   },
   "devDependencies": {
     "@types/node": "^20",
